--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,37 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>cameron davis</title>
+    <style>
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+      #background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+      #background img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(8px); /* Apply blur effect */
+      }
+      #root {
+        position: relative;
+        z-index: 1;
+      }
+    </style>
   </head>
   <body>
+    <div id="background"><img src="%PUBLIC_URL%/bg.jpg" /></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
