--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        filter: blur(8px); /* Apply blur effect */
+        filter: blur(10px); /* Apply blur effect */
       }
       #root {
         position: relative;
@@ -52,7 +52,7 @@
     </style>
   </head>
   <body>
-    <div id="background"><img src="%PUBLIC_URL%/bg.jpg" /></div>
+    <div id="background"><img src="%PUBLIC_URL%/seattle_bg.jpg" /></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
